# worldsim-core

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  run.lock.json
.github/workflows/: ci.yml  release.yml  slow-tests.yml
examples/: gravity-drag.lock.json  run_gravity_drag.py  run_two_body.py  two-body.lock.json
examples/data/lawcards/: gravity.newton.v1.badhash.json  gravity.newton.v1.json
examples/data/worlds/: gravity_drag.demo.json  two-body.demo.json
src/worldsim_core/: __init__.py  cli.py  invariants.py  models.py  provenance.py  resolver.py  simulate.py  validate.py
src/worldsim_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/worldsim_core/solvers/: __init__.py  verlet.py
tests/: test_acceptance_slow.py  test_no_warnings.py  test_resolver_hash.py  test_smoke_drift.py  test_units.py
