[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldsim-core"
version = "0.1.0"
description = "Minimal RuleGraph simulation core with LawCards and N-body Verlet"
authors = [{ name = "RuleGraph" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
worldsim-run = "worldsim_core.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q -m 'not slow'"
markers = [
  "slow: long-running acceptance tests"
]