[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldsim-core"
version = "0.1.0"
description = "Minimal RuleGraph simulation core with LawCards and N-body Verlet"
authors = [{ name = "RuleGraph" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
worldsim-run = "worldsim_core.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q -m 'not slow' -p no:cacheprovider"
markers = [
  "slow: long-running acceptance tests"
]

[project.urls]
Homepage = "https://github.com/RuleGraph/worldsim-core"
Issues = "https://github.com/RuleGraph/worldsim-core/issues"

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = ["E","F","I","B","UP","SIM","ISC"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
strict_optional = true
ignore_missing_imports = true